<resources>
    <string name="app_name">Time Manager</string>
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">用户名无效</string>
    <string name="login_failed">"登录失败"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TimePower</string>
    <string name="nav_header_subtitle">This is an intersting time management software</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">时力</string>
    <string name="menu_gallery">个人背包</string>
    <string name="menu_slideshow">抽卡</string>
    <string name="menu_tools">软件设置</string>
    <string name="menu_share">分享软件</string>
    <string name="menu_logout">退出登录</string>
    <string name="menu_send">信息</string>
</resources>
