<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.o1.timemanager.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_information"
        android:name="com.o1.timemanager.ui.backpack.BackpackFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_information" />

    <fragment
        android:id="@+id/nav_knapsack"
        android:name="com.o1.timemanager.ui.lottery.LotteryFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_knapsack" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.o1.timemanager.ui.setting.SettingFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.o1.timemanager.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.o1.timemanager.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>